# infra-lab

./: .env.example  .gitignore  INFRA_QUEST_PLAN.md  INFRA_QUEST_PRD.md  INFRA_QUEST_SPEC.md  INFRA_QUEST_V2_PLAN.md  INFRA_QUEST_V2_PRD.md  INFRA_QUEST_V2_SPEC.md  Makefile  README.md  docker-compose.yml  hello.txt  package.json
.github/workflows/: verify.yml
apps/api/: Dockerfile  aws-wrapper.sh  pyproject.toml
apps/api/app/: aws_client.py  config.py  db.py  main.py  mission_loader.py  models.py
apps/api/app/routes/: floci.py  health.py  missions.py  runtime.py  terminal.py
apps/api/app/services/: progress.py  reset.py  validation.py
apps/api/app/validators/: __init__.py  apigateway.py  dynamodb.py  lambda_.py  runtime.py  s3.py  sns.py  sqs.py  workflow.py
apps/api/tests/: test_config.py  test_mission_loader.py  test_validators.py  test_validators_apigateway.py  test_validators_dynamodb.py  test_validators_runtime.py  test_validators_s3.py  test_validators_sqs.py  test_validators_workflow.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
docs/design/: embedded-terminal-security.md
docs/privacy/: local-data-and-privacy.md
docs/release/: beginner-usability-gate.md  clean-machine-checklist.md  end-to-end-acceptance-matrix.md  final-handoff.md  known-issues-template.md
missions/: course.yml
missions/apigateway-http-trigger/: mission.yml
scripts/: ama-agent.py  ama-host-bridge.py  dev.sh  e2e-local-flow.py  reset-lab.sh  smoke-test.sh  validate-mission-authoring.py  verify-local-only.sh  verify-release-artifacts.sh
(+41 files in other folders)
