[project]
name = "infra-quest-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "boto3==1.43.12",
    "botocore==1.43.12",
    "sqlmodel==0.0.38",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "pytest==9.0.3",
    "ruff==0.15.14",
    "httpx==0.28.1",
    "requests==2.32.3",
]
[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.14",
    "httpx==0.28.1",
]